# elk_parser

./: CMakeLists.txt  grammar.cpp  grammar.h  grammar.txt  helper_class.cpp  helper_class.h  main.cpp  sequence_analyzer.cpp  sequence_analyzer.h  static_definitions.cpp  static_definitions.h  transition.cpp  transition.h
